--- a/asset/index.less
+++ b/asset/index.less
@@ -1,7 +1,8 @@
 .oxmod-product-buy{
 /* CSS */
   .product{
-    background-color: #f5f5f5;
+    background-color: #f5f5f5; 
+    color:#333;
 
     padding:10px 10px 10px 120px;
     overflow: hidden;
@@ -20,7 +21,7 @@
       height: 100px;
       background-color: #fff;
       background-position: center center;
-      background-size: contain;
+      background-size: cover;
       background-repeat: no-repeat;
     }
   }
@@ -50,7 +51,7 @@
     line-height: 1;
     display: inline-block;
     margin-right: 10px;
-    vertical-align: -3px;
+    //vertical-align: -3px;
     &:before{
       content:'\a5\20';
       font-size:14px;
@@ -377,6 +378,10 @@
       }
     }
 
+  }
+  .bt-popup{
+    background-color: transparent;
+    border:none;
   }
   .err-tip{
     color:#f00;
