--- a/asset/index.less
+++ b/asset/index.less
@@ -31,10 +31,11 @@
       font-weight: 400;
       vertical-align: top;
       border-bottom: solid 1px #f5f5f5;
-      padding:5px;
+      padding:5px 10px;
     }
     th{
       line-height: 30px;
+      text-align:left;
     }
     td{
       text-align: right;
@@ -78,96 +79,35 @@
     }
   }
   .op{
-    padding:10px 5px;
+    padding:10px;
+    text-align:center;
+    margin-top: 20px;
   }
   .bt-submit{
     width:100%;
     height:40px;
-    background-color: #f60;
+    
     color:#fff;
-    border:solid 1px #ccc;
-    border-radius: 10px;
-    font-size:16px;
+    border:none;
+    
+    font-size:15px;
   }
   .total{
-    padding:5px;
+    padding:10px;
   }
   .count{
     float:right;
     margin-top:5px;
   }
-  .popup{
-    position: fixed;
-    height:100%;
-    width: 100%;
-    background-color: rgba(0,0,0,.3);
-    top:0;
-    left:0;
-    opacity: 0;
-    transition: all .5s;
-    visibility: hidden;
-    .cnt{
-      transition: all .5s;
-      transform: translate(0,100%);
-      position: absolute;
-      bottom:0;
-      left:0;
-      width:100%;
-      background-color: #fff;
-      box-sizing: border-box;
-      padding:10px;
-    }
-  }
-  .popup-show{
-    //display: block;
-    visibility: visible;
-    opacity: 1;
-    .cnt{
-      transform: translate(0,0);
-    }
-  }
-  .addresslist{
-    li{
-      padding:5px 40px 5px 0;
-      border-top: solid 1px #f5f5f5;
-      &:first-child{
-        border-top-style: none;
-      }
-    }
-    .sign{
-      float:right;
-      margin-top:10px;
-      margin-right:-30px;
-    }
-  }
-  /** */
-  .bt-order {
-    background-color: #f60;
-    width: 120px;
-    color: #fff;
-    display: inline-block;
-    border: none;
-    height: 40px;
-    padding: 0 10px;
-    vertical-align: top;
-    font-size: 15px;
-    letter-spacing: 2px;
-    &:disabled {
-      background-color: #999;
-    }
-    &:hover {
-      opacity: .8;
-    }
+  .address{
+    //color:#666;
   }
   .empty {
     text-align: center;
     padding: 30px 0;
     color: #888;
   }
-  .iconfont {
-    font-family: smct-iconfont;
-    font-style: normal;
-  }
+ 
   .loading {
     color: #999;
     //padding: 30px 0;
@@ -235,160 +175,6 @@
     content:'\00a5\20';
     font-family: sans-serif;
   }
-  hr{
-    height:0;
-    border: none;
-    border-top:solid 1px #f5f5f5;
-  }
-  .onebar{
-    margin:10px;
-    text-align: left;
-  }
-  .lrbar{
-    font-size:0;
-    margin:10px;
-    white-space: nowrap;
-  }
-  .lrbar>span{
-    width:50%;
-    font-size:14px;
-    display: inline-block;
 
-  }
-  .lrbar>span:first-child{
-    text-align: left;
-  }
-  .lrbar>span:last-child{
-    text-align: right;
-  }
-  .lrbar>span:only-child{
-    width: 100%;
-    text-align: left;
-  }
-
-  .formbar{
-    margin:10px;
-    padding-left:60px;
-    text-align: right;
-    >label:first-child{
-      float: left;
-      margin-left:-60px;
-    }
-  }
-
-  .address{
-    display: inline-block;
-    padding-top:2px;
-    white-space: normal;
-    font-size:12px;
-    font-weight: 400;
-    font-style: normal;
-    color:#666;
-    padding-right:10px;
-    &:before{
-      content: '';
-      border-width: 1px;
-      border-style: solid;
-      border-color:#ccc #ccc transparent transparent;
-      float: right;
-      width:5px;
-      height:5px;
-      margin-top:5px;
-      margin-right: -9px;
-      -webkit-transform: rotate(45deg);
-    }
-    .bt-address{
-      color:#09c;
-      font-weight: 400;
-    }
-  }
-  .fullpopup{
-    background-color: #fff;
-    position: fixed;
-    top:0;
-    left:0;
-    width: 100%;
-    height: 100%;
-    z-index: 9;
-    transition: transform .3s;
-    -webkit-transform: translate(0 ,100%);
-    visibility: hidden;
-    .title{
-      font-size:16px;
-      background-color: #f5f5f5;
-      box-shadow: 0 0 6px #999;
-      line-height: 32px;
-      text-align: left;
-      padding:0 10px;
-      color:#333;
-      font-weight: 400;
-      .rightbtn{
-        color:#0099cc;
-        font-size:12px;
-        float: right;
-        background-color: transparent;
-        border:none;
-        height:30px;
-        line-height:30px;
-        width:40px;
-        padding:0;
-      }
-    }
-  }
-  .fullpopup.show{
-    box-shadow: 1px 1px 10px #000;
-    transform: translate(0,0);
-    visibility: visible;
-
-  }
-  .address-form{
-    padding:10px;
-    .formitem{
-      padding:10px 0;
-    }
-    input,select{
-      border:solid 1px #eee;
-      font-size:14px;
-      border-radius: 5px;
-      background-color: #fff;
-      height:26px;
-      border-radius: 5px;
-    }
-    input{
-      width:100%;
-      padding:2px 0;
-    }
-    button{
-      width:100%;
-      height:40px;
-      background-color: #09c;
-      color:#fff;
-      font-size:15px;
-      border:solid 1px #ccc;
-      border-radius: 5px;
-      letter-spacing: 5px;
-    }
-    .select-group{
-      display: flex;
-      justify-content: space-between;
-      select{
-        height: 30px;
-        width:32%;
-        text-align: center;
-      }
-    }
-
-  }
-  .bt-popup{
-    background-color: transparent;
-    border:none;
-  }
-  .err-tip{
-    color:#f00;
-    font-style: normal;
-    font-size:13px;
-    width:120px;
-    text-align: center;
-  }
 
  }
